Enough for today

--- a/ruhuisstijl/beamerfontthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerfontthemeruhuisstijl.sty
@@ -2,6 +2,11 @@
 
 \ProcessOptionsBeamer
 
+\setbeamerfont{frametitle}{size=\large}
+\setbeamerfont{frametitle}{series=\bfseries}
+\setbeamerfont{blocktitle}{series=\bfseries}
+\setbeamerfont{description item}{series=\bfseries}
+
 
 \mode<all>
 
