--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -5,8 +5,8 @@
 \author{lama-fan}
 
 %\usetheme[official=false]{ruhuisstijl}
-%\usetheme[official=true]{ruhuisstijl}
-\usetheme[official=true,department=clst]{ruhuisstijl}
+\usetheme[official=true]{ruhuisstijl}
+%\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
 
@@ -102,7 +102,34 @@
                 \item Es haben alle V\"ogel Nester begonnen, nicht aber ich und du, was wartet Ihr nun? 
             \end{itemize}
         \end{itemize}
+        \item De tekst, die werd geschreven door een West-Vlaamse kopiist,
+        \item dateert naar schatting uit het derde kwart van de 11e eeuw.
+        \item  De eerste twee zinnen zijn in het Latijn. 
+        \item De taal waarin de rest van de tekst geschreven is wordt door de meeste taalkundigen als Oud-Westnederfrankisch aangeduid
+        \item maar hierover bestaat nog controverse.
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Hier tellen we mee}
+    \begin{enumerate}
+        \item Tel je mee?
+        \item De tweede
+        \item Drie!
+        \begin{enumerate}
+            \item Drie-en-een-beetje
+            \item Drie-en-half
+            \item \label{haha} Twee ei is geen ei
+        \end{enumerate}
+        \item Vier!!!!!
+    \end{enumerate}
+
+    H\'e, \ref{haha} hoort daar helemaal niet.
+
+    \begin{description}
+        \item[Een item] Ook de description maar even testen met een veel-te-lange regel om te kijken wat er dan gebeurt.
+        \item[Mag] ook kort zijn uiteraard.
+        \item[Maar wat nu als] het label van zichzelf wel erg lang is?
+    \end{description}
 \end{frame}
 
 \begin{frame}{Opsommingen enzo}
