--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -111,6 +111,7 @@
 \end{frame}
 
 \begin{frame}{Hier tellen we mee}
+    Eerst maar eens de kantlijn bepalen.
     \begin{enumerate}
         \item Tel je mee?
         \item De tweede
