--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -167,8 +167,8 @@
 
 \end{frame}
 
-\begin{tussenpagina}{Tussenpagina}{Op een tussenpagina mag wel extra beeld toegevoegd worden.}
-        \includegraphics[width=0.5\textwidth]{image.png}
+\begin{tussenpagina}{Tussenpagina}{Op een tussenpagina mag wel extra beeld toegevoegd worden.}{imagebackground.jpg}
+        %\includegraphics[width=0.5\textwidth]{image.png}
 \end{tussenpagina}
 
 \begin{frame}
