Added additional files

--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -4,8 +4,8 @@
 \date{\today}
 \author{lama-fan}
 
-%\usetheme[official=false]{ruhuisstijl}
-\usetheme[official=true]{ruhuisstijl}
+\usetheme[official=false]{ruhuisstijl}
+%\usetheme[official=true]{ruhuisstijl}
 %\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
