--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -4,9 +4,9 @@
 \date{\today}
 \author{lama-fan}
 
-\usetheme[official=false]{ruhuisstijl}
+%\usetheme[official=false]{ruhuisstijl}
 %\usetheme[official=true]{ruhuisstijl}
-%\usetheme[official=true,department=clst]{ruhuisstijl}
+\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
 
@@ -14,6 +14,12 @@
     \titlepage
 \end{frame}
 
+\begin{frame}{Overzicht}
+    \tableofcontents
+\end{frame}
+
+\section{Voorwaarden}
+\subsection{Algemeen}
 \begin{frame}
     \frametitle{Gebruiksvoorwaarden algemeen}
 
@@ -33,6 +39,7 @@
     \end{block}
 \end{frame} 
 
+\subsection{Tekstpagina's}
 \begin{frame}
     \frametitle{Gebruiksvoorwaarden tekstpagina's (witte achtergrond)}
 
@@ -63,6 +70,7 @@
 
 \end{frame}
 
+\section{Kleuren}
 \begin{frame}
     \frametitle{Kleuren in het RU Thema}
 
@@ -72,6 +80,7 @@
     \href{http://google.com/}{Hyperlink: RGB 190/49/26 (RU huisstijl rood)}
 \end{frame}
 
+\section{Sjablonen}
 \begin{frame}
     \frametitle{Sjablonen}
     
@@ -92,85 +101,13 @@
 
 \end{frame}
 
-\begin{frame}{Hebban olla vogala nestas hagunnan hinase hic anda thu?}
-    \begin{itemize}
-        \item Wat unbidan we nu
-        \begin{itemize}
-            \item Habent omnes uolucres nidos inceptos nisi ego et tu. Quid expectamus nunc.
-            \begin{itemize}
-                \item Have all birds begun nests, except me and you, what are we waiting for?
-                \item Es haben alle V\"ogel Nester begonnen, nicht aber ich und du, was wartet Ihr nun? 
-            \end{itemize}
-        \end{itemize}
-        \item De tekst, die werd geschreven door een West-Vlaamse kopiist,
-        \item dateert naar schatting uit het derde kwart van de 11e eeuw.
-        \item  De eerste twee zinnen zijn in het Latijn. 
-        \item De taal waarin de rest van de tekst geschreven is wordt door de meeste taalkundigen als Oud-Westnederfrankisch aangeduid
-        \item maar hierover bestaat nog controverse.
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{Hier tellen we mee}
-    Eerst maar eens de kantlijn bepalen.
-    \begin{enumerate}
-        \item Tel je mee?
-        \item De tweede
-        \item Drie!
-        \begin{enumerate}
-            \item Drie-en-een-beetje
-            \item Drie-en-half
-            \item \label{haha} Twee ei is geen ei
-        \end{enumerate}
-        \item Vier!!!!!
-    \end{enumerate}
-
-    H\'e, \ref{haha} hoort daar helemaal niet.
-
-    \begin{description}
-        \item[Een item] Ook de description maar even testen met een veel-te-lange regel om te kijken wat er dan gebeurt.
-        \item[Mag] ook kort zijn uiteraard.
-        \item[Maar wat nu als] het label van zichzelf wel erg lang is?
-    \end{description}
-\end{frame}
-
-\begin{frame}{Opsommingen enzo}
-    Eerst even wat normale tekst om de kantlijn te bepalen.
-    \begin{itemize}
-        \item[$\star$] Item 0
-        \item Dit is item 1
-        \begin{itemize}
-            \item Dit is een ander item 1.1
-            \item[$\Gamma$] Een \emph{custom} item 1.2
-            \begin{itemize}
-                \item $\alpha \beta \gamma$
-                \item Maak deze regel dan maar gewoon lekker lang om te zien hoe de indentatie is.
-            \end{itemize}
-        \end{itemize}
-        \item Item 2 dan maar
-    \end{itemize}
-
-    \begin{enumerate}
-        \item First item
-        \begin{enumerate}
-            \item Nested.
-        \end{enumerate}
-    \end{enumerate}
-
-\[ a+b=4 \]
-
-\begin{equation}
-    \begin{split}
-        a = 2 \\
-        b = 2
-    \end{split}
-\end{equation}
-
-\end{frame}
-
+\section{Voorbeeldslides}
+\subsection{Tussenpagina}
 \begin{tussenpagina}{Tussenpagina}{Op een tussenpagina mag wel extra beeld toegevoegd worden.}{imagebackground.jpg}
         %\includegraphics[width=0.5\textwidth]{image.png}
 \end{tussenpagina}
 
+\subsection{Blokken}
 \begin{frame}
     \frametitle{Titel en object}
 
@@ -263,6 +200,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \end{figure}
 \end{frame}
 
+\subsection{Tabel}
 \begin{frame}
     \frametitle{Voorbeeld van een tabel}
 
@@ -277,6 +215,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \end{tabular}
 \end{frame}
 
+\subsection{De rest}
 \begin{frame}{Niet alles blootgeven}
     De \pause tekst \pause verschijnt \pause in \pause stukken.
 
@@ -297,6 +236,81 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \visible<+->{ dit}
     \only<+->{ leuke}
     trucje
+\end{frame}
+
+\begin{frame}{Hebban olla vogala nestas hagunnan hinase hic anda thu?}
+    \begin{itemize}
+        \item Wat unbidan we nu
+        \begin{itemize}
+            \item Habent omnes uolucres nidos inceptos nisi ego et tu. Quid expectamus nunc.
+            \begin{itemize}
+                \item Have all birds begun nests, except me and you, what are we waiting for?
+                \item Es haben alle V\"ogel Nester begonnen, nicht aber ich und du, was wartet Ihr nun? 
+            \end{itemize}
+        \end{itemize}
+        \item De tekst, die werd geschreven door een West-Vlaamse kopiist,
+        \item dateert naar schatting uit het derde kwart van de 11e eeuw.
+        \item  De eerste twee zinnen zijn in het Latijn. 
+        \item De taal waarin de rest van de tekst geschreven is wordt door de meeste taalkundigen als Oud-Westnederfrankisch aangeduid
+        \item maar hierover bestaat nog controverse.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Hier tellen we mee}
+    Eerst maar eens de kantlijn bepalen.
+    \begin{enumerate}
+        \item Tel je mee?
+        \item De tweede
+        \item Drie!
+        \begin{enumerate}
+            \item Drie-en-een-beetje
+            \item Drie-en-half
+            \item \label{haha} Twee ei is geen ei
+        \end{enumerate}
+        \item Vier!!!!!
+    \end{enumerate}
+
+    H\'e, \ref{haha} hoort daar helemaal niet.
+
+    \begin{description}
+        \item[Een item] Ook de description maar even testen met een veel-te-lange regel om te kijken wat er dan gebeurt.
+        \item[Mag] ook kort zijn uiteraard.
+        \item[Maar wat nu als] het label van zichzelf wel erg lang is?
+    \end{description}
+\end{frame}
+
+\begin{frame}{Opsommingen enzo}
+    Eerst even wat normale tekst om de kantlijn te bepalen.
+    \begin{itemize}
+        \item[$\star$] Item 0
+        \item Dit is item 1
+        \begin{itemize}
+            \item Dit is een ander item 1.1
+            \item[$\Gamma$] Een \emph{custom} item 1.2
+            \begin{itemize}
+                \item $\alpha \beta \gamma$
+                \item Maak deze regel dan maar gewoon lekker lang om te zien hoe de indentatie is.
+            \end{itemize}
+        \end{itemize}
+        \item Item 2 dan maar
+    \end{itemize}
+
+    \begin{enumerate}
+        \item First item
+        \begin{enumerate}
+            \item Nested.
+        \end{enumerate}
+    \end{enumerate}
+
+\[ a+b=4 \]
+
+\begin{equation}
+    \begin{split}
+        a = 2 \\
+        b = 2
+    \end{split}
+\end{equation}
+
 \end{frame}
 
 \end{document}
