Too many changes. Fixed the handout, fixed the heading of the source files, and many more

--- a/ruhuisstijl/beamercolorthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamercolorthemeruhuisstijl.sty
@@ -1,7 +1,18 @@
+% This beamer template mimics the corporate and departemental
+% style for the Radboud University powerpoint presentations.
+% 
+% For comments, questions, and suggestions contact me at 
+% l.onrust@let.ru.nl or visit the github repository on
+% https://github.com/naiaden/presentations/tree/master/ruhuisstijl
+%
+% You can distribute and edit the files as you wish, but I'd
+% love to hear of any changes. Also, if you let me know that
+% you are using the template, I can keep you up-to-date on
+% future changes.
+
 \mode<presentation>
 
 \ProcessOptionsBeamer
-
 
 \setbeamercolor{normal text}{fg=ruhuisstijlzwart}
 \setbeamercolor{structure}{fg=ruhuisstijlzwart}
@@ -15,12 +26,9 @@
     \setbeamercolor{title}{fg=ruhuisstijlzwart}
 }
 
-
 \mode<all>
 
-%\definecolor{ruhuisstijlrood}{rgb}{190,49,26}
 \definecolor{ruhuisstijlrood}{rgb}{0.745,0.192,0.102}
 \definecolor{ruhuisstijlzwart}{rgb}{0,0,0}
 \definecolor{ruhuisstijlwit}{rgb}{0.98,0.98,0.98}
-%\definecolor{ruhuisstijlwit}{rgb}{250,250,250}
 
