--- a/ruhuisstijl/beamerfontthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerfontthemeruhuisstijl.sty
@@ -1,3 +1,15 @@
+% This beamer template mimics the corporate and departemental
+% style for the Radboud University powerpoint presentations.
+% 
+% For comments, questions, and suggestions contact me at 
+% l.onrust@let.ru.nl or visit the github repository on
+% https://github.com/naiaden/presentations/tree/master/ruhuisstijl
+%
+% You can distribute and edit the files as you wish, but I'd
+% love to hear of any changes. Also, if you let me know that
+% you are using the template, I can keep you up-to-date on
+% future changes. 
+
 \mode<presentation>
 
 \ProcessOptionsBeamer
@@ -7,7 +19,5 @@
 \setbeamerfont{blocktitle}{series=\bfseries}
 \setbeamerfont{description item}{series=\bfseries}
 
-
 \mode<all>
-
 
