--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -11,7 +11,7 @@
 % you are using the template, I can keep you up-to-date on
 % future changes.
 
-\documentclass[handout,xcolor=table,10pt,t]{beamer}
+\documentclass[xcolor=table,10pt,t]{beamer}
 \title{Wie weet er wat er gebeurt als je een vele te lange titel neemt?}
 \subtitle{Gebruiksvoorwaarden \& sjablonen (juli 2014)}
 \date{\today}
@@ -20,8 +20,8 @@
 %% Use the official themes as much as possible
 %\usetheme[official=false,department=clst]{ruhuisstijl}
 %\usetheme[official=false]{ruhuisstijl}
-%\usetheme[official=true]{ruhuisstijl}
-\usetheme[official=true,department=clst]{ruhuisstijl}
+\usetheme[official=true]{ruhuisstijl}
+%\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
 
