--- a/ruhuisstijl/distributed/example.tex
+++ b/ruhuisstijl/distributed/example.tex
@@ -15,11 +15,11 @@
 %% you are using the template, I can keep you up-to-date on
 %% future changes.
 
-\documentclass[department=clst, notes={hide notes}, slidesperpage=4, handout, official=true]{beamerruhuisstijl}
+\documentclass[department=cls, notes={hide notes}, slidesperpage=4, handout, official=true]{beamerruhuisstijl}
 %% The class takes the following optional arguments:
 %% notes: {show notes}, {hide notes}, {show only notes}
 %% official: true, false
-%% department: clst
+%% department: clst, cls
 %% handout
 %% slidesperpage: 1, 2, 3, 4, 6 
 
