--- a/ruhuisstijl/distributed/beamerruhuisstijl.cls
+++ b/ruhuisstijl/distributed/beamerruhuisstijl.cls
@@ -404,10 +404,15 @@
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_cls_2014-43-slide.pdf}
         \fi
     }{%
+    \ifthenelse{\equal{\dept}{hlcs}}{%
+        \ifnum\thepage>1\relax%
+            \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_hlcs_2014-43-slide.pdf}
+        \fi
+    }{%
         \ifnum\thepage>1\relax%
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl2014-43-slide.pdf}
         \fi
-    }}%
+    }}}%
 }
 
 \defbeamertemplate*{title page}{ruhuisstijl}[1][]
@@ -424,11 +429,17 @@
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_cls_2014-43-front.pdf}
         \fi
     }{%
+    \ifthenelse{\equal{\dept}{hlcs}}{%
+        \ifnum\thepage>1\relax%
+        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+            \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_hlcs_2014-43-front.pdf}
+        \fi
+    }{%
         \ifnum\thepage>1\relax%
         \else\vspace*{-0.23cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl2014-43-front.pdf}
         \fi
-    }}%
+    }}}%
     \vspace*{-8.5cm}
     \begin{minipage}[t][2.5cm][t]{10cm}%
         \begin{beamercolorbox}{title}%
